# price-oracle

./: Cargo.toml  migration.md  prompt-guide.md
res/: price_oracle.wasm
src/: asset.rs  collateral.rs  ema.rs  legacy.rs  lib.rs  oracle.rs  owner.rs  upgrade.rs  utils.rs
tests/: workspace_tests.rs
