[package]
name = "price-oracle"
version = "0.6.0"
authors = ["Eugene The Dream <ek@proximity.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.17.0"
near-sdk-macros = "5.17.0"
borsh = "1.5.7"
serde_json = "1.0"
dcap-qvl = { git = "https://github.com/mattlockyer/dcap-qvl" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"

[dev-dependencies]
near-sdk = { version = "5.17.0", features = ["unit-testing"] }
near-workspaces = { version = "0.21" }
approx = "0.5"
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
